--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+img{
+	width:32%;
+	border-radius:20px
+}
+ .container{
+	 background-color:#444444;
+	 padding:20px
+}
+#photo-heading{
+	  text-align:center;
+    	color:white;
+}
